<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/black"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="60dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in" />

    <!-- phone -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_phone_24"
            android:hint="@string/phone_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_lock_24"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signup"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/log_up" />

</LinearLayout>