<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/black"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="60dp"
        android:layout_height="wrap_content"
        android:text="@string/registration" />


    <!-- name text filed -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_person_24"
            android:hint="@string/full_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email text filed -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_email_24"
            android:hint="@string/example_mail_com" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- phone text filed -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_phone_24"
            android:hint="@string/phone_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- password text filed -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_lock_24"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signup"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/AlreadyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="Already Have an Account. Click Here" />


</LinearLayout>